# legibility-engine

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  render.yaml
config/: audit_types.yaml  benchmarks.yaml  tier_lists.yaml
config/prompts/: channel_snapshots_v1.md  claim_consistency_v1.md  claim_evidence_ratio_v1.md  claim_extraction_v1.md  consistency_v1.md  founder_voice_consistency_v1.md  signature_phrases_v1.md  source_link_classification_v1.md
docs/: geo_narrative_audit_spec.md
src/geo_narrative_audit/: __init__.py  analysis.py  app.py  cli.py  fetch.py  llm.py  models.py  settings.py  storage.py
src/geo_narrative_audit/templates/: audit.html  dashboard.html
src/legibility_engine/: __init__.py  app.py  cache.py  cli.py  config.py  coverage.py  entity.py  geo_summary.py  inputs.py  matching.py  models.py  orchestrator.py  report.py  scoring.py  storage.py  subscores.py  utils.py
src/legibility_engine/collectors/: anthropic_client.py  companies_house.py  domain.py  openpagerank.py  owned_channels.py  platform_surfaces.py  search.py  site.py  transport.py  wayback.py  wikidata.py
src/legibility_engine/proxies/: authority.py  base.py  behavioural.py  consistency.py  corroboration.py  provenance.py
src/legibility_engine/renderers/: worksheet.py
src/legibility_engine/subscore_modules/: __init__.py  authority_bodies.py  authority_inbound_citation.py  common.py  (+21 more)
tests/: test_app.py  test_architecture.py  test_geo_audit_analysis.py  test_geo_audit_app.py  test_proxies.py  test_renderer.py  test_report.py  test_scoring.py
(+1 files in other folders)
