[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legibility-engine"
version = "0.1.0"
description = "Evidence-first audit engine for The Legibility Gap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.52.0",
  "beautifulsoup4>=4.12.3",
  "extruct>=0.17.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "Jinja2>=3.1.4",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-whois>=0.9.5",
  "pyyaml>=6.0.1",
  "tenacity>=8.2.3",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
  "weasyprint>=65.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
legibility = "legibility_engine.cli:app"
legibility-web = "legibility_engine.app:run_dev"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
